# 2D-renderer

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/engine/camera/: camera.h
engine/include/engine/graphics/: quad.h  shader.h  sprite.h
engine/include/engine/input/: input.h
engine/include/engine/timer/: timer.h
engine/include/engine/window/: window.h
engine/include/util/: utility.h
engine/shaders/: frag.glsl  vert.glsl
engine/src/camera/: camera.cpp
engine/src/graphics/: quad.cpp  shader.cpp  sprite.cpp
engine/src/input/: input.cpp
engine/src/timer/: timer.cpp
engine/src/util/: utility.cpp
engine/src/window/: window.cpp
game/: CMakeLists.txt
game/src/: main.cpp
pong/: CMakeLists.txt
pong/src/: main.cpp
